--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <script type="text/javascript" src="js/d3.min.js"></script>
+        <script type="text/javascript" src="js/socket.io-1.3.3.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
