--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <body>
         <script type="text/javascript" src="js/d3.min.js"></script>
         <script type="text/javascript" src="js/socket.io-1.3.3.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/app2.js"></script>
     </body>
 </html>
